--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,220 @@
   font-style: normal;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   font-family: var(--font-main);
+}
+
+.front-page {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
   background-color: var(--c-dark);
-  color: var(--c-light);
+  padding: 30px 10px 55px;
+}
+
+.front-page-my-name {
+  margin-top: 37px;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  text-transform: uppercase;
+  color: var(--txt-c-accent);
+  text-align: center;
+}
+
+.front-page-profession {
+  margin-top: 13px;
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 42px;
+  text-transform: uppercase;
+  color: var(--txt-c-light);
+  text-align: center;
+}
+
+.front-page-description {
+  margin: 22px 0;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--txt-c-light);
+}
+
+.navigation {
+  /* position: fixed;
+  max-width: 100%; */
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.logo-link {
+  display: flex;
+}
+
+.hire-me-btn {
+  font-weight: 800;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: 0.05em;
+  margin: 0 20px 0 55px;
+  text-transform: uppercase;
+  color: var(--txt-c-accent);
+  text-decoration: none;
+}
+
+.menu {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  background-color: var(--c-accent);
+  cursor: pointer;
+  margin: 0 auto;
+  z-index: 9;
+}
+.menu-global {
+  backface-visibility: hidden;
+  position: absolute;
+  border-top: 2px solid white;
+  width: 14px;
+  transition: 0.55s;
+}
+.menu-top {
+  top: 10px;
+  left: 8px;
+}
+.menu-middle {
+  top: 14px;
+  left: 8px;
+}
+.menu-bottom {
+  top: 18px;
+  left: 8px;
+}
+
+.menu-top-click {
+  backface-visibility: hidden;
+  top: 15px;
+  transform: rotate(50deg);
+  transition: 0.55s 0.5s;
+}
+.menu-middle-click {
+  opacity: 0;
+}
+.menu-bottom-click {
+  backface-visibility: hidden;
+  top: 15px;
+  transform: rotate(-410deg);
+  transition: 0.55s 0.5s;
+}
+
+.my-works-btn {
+  width: 100%;
+  height: 60px;
+  background-color: var(--c-accent);
+  font-family: Acrom;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--txt-c-light);
+  border: none;
+  cursor: pointer;
+}
+
+.my-photo {
+  width: 100px;
+  height: 115px;
+  margin-top: 40px;
+  align-self: center;
+}
+
+.about-me {
+  margin: 17px 0;
+  font-size: 15px;
+  line-height: 140%;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--txt-c-light);
+}
+
+.about-me-btn {
+  width: 140px;
+  height: 40px;
+
+  align-self: center;
+
+  background-color: transparent;
+  border: 2px solid var(--c-accent);
+
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 18px;
+  /* text-align: right; */
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--txt-c-accent);
+}
+
+.about-me-btn--icon {
+  width: 9px;
+  height: 9px;
+  margin: 0 7px 0.5px 0;
+}
+
+.laptop-img {
+  margin: 37px 0;
+}
+
+.my-skills {
+  margin: 0 42px;
+  width: 185px;
+  align-self: center;
+}
+
+.my-skills-list {
+  align-self: center;
+  margin: 30px 0;
+
+  line-height: 19px;
+  list-style: none;
+  color: var(--txt-c-light);
+}
+
+.my-skills-list li + li {
+  margin-top: 20px;
+}
+
+.my-skills-list li img {
+  width: 10px;
+  height: 10px;
+}
+
+.my-skills-list li img:first-child {
+  margin-right: 5px;
+  margin-bottom: 0.5px;
+}
+
+.my-skills-list li img + img {
+  margin-right: 5px;
+  margin-bottom: 0.5px;
 }
