--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,70 @@ img {
   margin-bottom: 80px;
 }
 
+/* PROJECT MODAL */
+
+.project-modal {
+  width: 320px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 10px;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.project-modal--active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.project-modal-container {
+  background: var(--c-light);
+  padding: 45px 0;
+  text-align: left;
+  position: relative;
+  box-sizing: border-box;
+  height: 85%;
+}
+
+.project-modal-scrollable {
+  overflow-y: auto;
+  height: 100%;
+  padding: 0 25px;
+}
+
+.project-modal-title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  color: var(--txt-c-dark);
+  text-transform: uppercase;
+  text-decoration: none;
+  margin: 0 0 25px 0;
+  display: block;
+}
+
+.project-modal-text {
+  font-size: 16px;
+  line-height: 145%;
+  color: var(--txt-c-dark);
+  margin: 0 0 30px 0;
+}
+
+.project-modal-img {
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  color: #b8c6da;
+  cursor: pointer;
+}
+
 /* MODALS END */
 
 /* FRONT PAGE */
