--- a/css/style.css
+++ b/css/style.css
@@ -1440,8 +1440,12 @@ img {
   .my-team-projects-items-wrapper {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    max-width: var(--desktop-lg);
+    margin: 0 auto;
   }
   .project-item {
+    min-width: 50%;
     max-width: 50%;
     margin: 0;
   }
@@ -1450,5 +1454,98 @@ img {
   }
   .project-item:nth-child(even) {
     padding-left: 20px;
+  }
+  .my-projects {
+    padding: 130px 20px 200px 20px;
+  }
+  .my-projects h2 {
+    font-size: 70px;
+    line-height: 84px;
+    max-width: 730px;
+  }
+  .page-title {
+    max-width: 730px;
+    font-size: 70px;
+    line-height: 84px;
+  }
+  .about-page{
+    margin-top: 130px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .about-page-wrapper{
+    max-width: var(--desktop-lg);
+    margin: 0 auto;
+    position: relative;
+  }
+  .about-me--title {
+    max-width: 730px;
+    font-size: 36px;
+    line-height: 43px;
+  }
+  .web-illustration {
+    margin-top: 0;
+  }
+  .web-illustration span {
+    left: 41%;
+    top: -64%;
+    font-size: 250px;
+    line-height: 300px;
+  }
+  .web-illustration img {
+    right: 2%;
+    top: -72%;
+    width: 421px;
+    height: 455px;
+    margin-top: 0;
+    z-index: 3;
+  }
+  .about-me--text{
+    max-width: 500px;
+    margin-bottom: 95px;
+  }
+  .about-projects-bar {
+    background: var(--c-accent);
+    width: 159px;
+    height: 465px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 10px 5px;
+    margin-bottom: 35px;
+    margin-top: 15px;
+  }
+  .about-projects {
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .about-projects-count {
+    font-weight: bold;
+    font-size: 65px;
+    line-height: 78px;
+    color: var(--txt-c-light);
+    margin: 0;
+  }
+  .about-projects-text {
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 135%;
+    color: var(--txt-c-dark);
+    text-transform: uppercase;
+    width: 125px;
+  }
+}
+
+/* FOR LAPTOP IMG */
+@media only screen and (min-width: 1100px) {
+  .web-illustration img{
+    right: 14%;
+  }
+}
+@media only screen and (min-width: 1360px) {
+  .web-illustration img{
+    right: 18%;
   }
 }
