--- a/css/style.css
+++ b/css/style.css
@@ -798,6 +798,12 @@ img {
   align-items: center;
 }
 
+.callback-form-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .callback-form-input-error {
   border: 1px solid red !important;
 }
@@ -828,9 +834,15 @@ img {
   border: none;
   border-bottom: 1px solid #3e4e6a;
   outline: none;
+  font-size: 17px;
+  line-height: 150%;
   text-align: center;
   background-color: transparent;
-  color: grey;
+  color: var(--txt-c-grey);
+}
+
+.callback-form-input::placeholder {
+  color: var(--txt-c-grey);
 }
 
 .callback-form-submit {
@@ -1078,6 +1090,12 @@ img {
   display: inline-block;
   transform: scale(1.3);
 }
+.calculator-descr .calculator-descr-accent {
+  margin-left: -10px;
+}
+.calculator-descr span:last-child {
+  margin-left: -10px;
+}
 
 /* FOOTER END */
 
@@ -1160,6 +1178,9 @@ img {
     font-size: 36px;
     line-height: 43px;
   }
+  .about-me--title span:last-child {
+    margin-left: -20px;
+  }
   .page-title {
     font-size: 50px;
     line-height: 60px;
@@ -1191,6 +1212,7 @@ img {
     font-size: 50px;
     line-height: 60px;
     text-align: left;
+    margin-bottom: 45px;
   }
   .project-item {
     align-items: flex-start;
@@ -1225,6 +1247,7 @@ img {
     left: 10%;
   }
   .my-team-projects .section-title {
+    max-width: 400px;
     font-size: 50px;
     line-height: 60px;
     text-align: left;
@@ -1257,6 +1280,7 @@ img {
     margin-top: 10px;
   }
   .calculator-title {
+    max-width: 605px;
     font-size: 50px;
     line-height: 60px;
     padding: 0 5px;
@@ -1283,10 +1307,25 @@ img {
   .calculator-img + p {
     display: none;
   }
+  .calculator-info {
+    align-items: flex-start;
+  }
+  .calculator-info p:last-child {
+    margin-top: 5px;
+    text-align: left;
+  }
+  .calculator-descr span:last-child {
+    margin-left: 0;
+  }
+  .calculator-descr .calculator-descr-accent {
+    margin-left: -15px;
+  }
   .tablet-width {
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     flex-direction: row-reverse;
+    align-items: center;
     margin-bottom: 10px;
   }
   .tablet-width .tablet-width-item > * {
@@ -1468,12 +1507,15 @@ img {
     font-size: 70px;
     line-height: 84px;
   }
-  .about-page{
+  .about-page {
     margin-top: 130px;
     padding-left: 0;
     padding-right: 0;
   }
-  .about-page-wrapper{
+  .about-me--title span:last-child{
+    margin-left: 0;
+  }
+  .about-page-wrapper {
     max-width: var(--desktop-lg);
     margin: 0 auto;
     position: relative;
@@ -1500,7 +1542,7 @@ img {
     margin-top: 0;
     z-index: 3;
   }
-  .about-me--text{
+  .about-me--text {
     max-width: 500px;
     margin-bottom: 95px;
   }
@@ -1536,16 +1578,108 @@ img {
     text-transform: uppercase;
     width: 125px;
   }
+  .my-team-projects {
+    padding: 130px 20px 32px;
+  }
+  .substrate {
+    font-size: 250px;
+    line-height: 300px;
+    top: 7%;
+  }
+  .my-team-projects .section-title {
+    font-size: 70px;
+    line-height: 84px;
+    max-width: 730px;
+  }
+  .callback {
+    width: 100%;
+    max-width: var(--desktop-lg);
+    margin: 0 auto;
+    padding: 10px 0 150px;
+  }
+  .form-container {
+    padding: 90px 0 120px;
+  }
+  .form-title {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .form-description {
+    width: 100%;
+    margin-bottom: 45px;
+  }
+  .callback-form-input {
+    max-width: 260px;
+    margin: 0 40px 40px 0;
+    text-align: left;
+  }
+  .callback-form-input-wrapper {
+    flex-direction: row;
+  }
+  .callback-form-input-wrapper input:last-child {
+    margin-right: 0;
+  }
+  .calculator-info {
+    max-width: var(--desktop-lg);
+    margin: 0 auto;
+  }
+  .calculator {
+    display: flex;
+    padding: 150px 20px;
+  }
+  .calculator-wrapper {
+    display: flex;
+    max-width: var(--desktop-lg);
+    margin: 0 auto;
+  }
+  .calculator-title {
+    max-width: 800px;
+    margin-bottom: 45px;
+    font-size: 70px;
+    line-height: 84px;
+  }
+  .calculator-descr {
+    max-width: 640px;
+  }
+  .calculator-descr span {
+    padding: 15px;
+  }
+  .calculator-descr .calculator-descr-accent {
+    padding: 15px;
+    margin-left: -15px;
+  }
+  .calculator-info {
+    align-items: flex-start;
+  }
+  .calculator-info p:last-child {
+    text-align: left;
+    margin-left: 5px;
+  }
+  .tablet-width-img {
+    margin-top: -65px;
+    margin-left: 40px;
+  }
+  .calculator-form {
+    min-width: 390px;
+    padding: 40px 55px 60px;
+  }
 }
 
 /* FOR LAPTOP IMG */
 @media only screen and (min-width: 1100px) {
-  .web-illustration img{
+  .web-illustration img {
     right: 14%;
   }
 }
 @media only screen and (min-width: 1360px) {
-  .web-illustration img{
+  .web-illustration img {
     right: 18%;
+  }
+}
+
+
+@media only screen and (max-width: 380px) {
+  .about-me--title span:last-child{
+    margin-left: 0;
   }
 }
